# SPEC

./: .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  Compile.md  Doxyfile  LICENSE  Makefile  Makefile_mac  README.md  SPECfile  annotated.html  annotated_dup.js  basefn.f90  basefn.h  basefn_8f90.html  basefn_8f90.js  basefn_8f90_a29cbf901a18ead65d0e3a51956a3f045_icgraph.map  basefn_8f90_a29cbf901a18ead65d0e3a51956a3f045_icgraph.md5  basefn_8f90_a38dc596fb909186b01dacc1feac03164_icgraph.map  basefn_8f90_a38dc596fb909186b01dacc1feac03164_icgraph.md5  basefn_8f90_a6076d695487184d58d30d73de2f6470f_icgraph.map  basefn_8f90_a6076d695487184d58d30d73de2f6470f_icgraph.md5  basefn_8f90_a8f42498fd0b4c464c8c2d3ce0e94c56a_icgraph.map  basefn_8f90_a8f42498fd0b4c464c8c2d3ce0e94c56a_icgraph.md5  basefn_8f90_af6a4cad04c70bfb14fd18a3bfbc843a3_icgraph.map  basefn_8f90_af6a4cad04c70bfb14fd18a3bfbc843a3_icgraph.md5  bfield.f90  bfield.h  bfield_8f90.html  bfield_8f90.js  bfield_8f90.xhtml  bfield_8f90_adc615fe98d38488525cbe807d008860a_cgraph.map  bfield_8f90_adc615fe98d38488525cbe807d008860a_cgraph.md5  bndRep.f90  bnorml.f90  bnorml.h  bnorml_8f90.html  bnorml_8f90.js  brcast.f90  (+871 more)
.github/workflows/: build.yml  build_cmake.yml  doxygen.yml  github-ci.yml  py_spec.yml  python_wrapper.yml
InputFiles/: iterfree.sp
InputFiles/TestCases/: G1V02L0Fi.001.sp  G1V02L3Fi.001.info  G1V02L3Fi.001.sp  G1V03L2Fi.001.info  G1V03L2Fi.002.info  G1V05L0Fi.001.info  G1V05L0Fi.001.sp  G1V2L0Fi.001.info  G1V2L0Fi.001.sp  G1V31L1Fi.001.info  G1V31L1Fi.001.sp  G1V3Fi.000.sp  G1V3Fi.001.sp  G2V01L0Fi.001.info  G2V01L0Fi.001.sp  G2V32L1Fi.001.info  G2V32L1Fi.001.sp  G2V32L3Fi.001.info  G2V32L3Fi.001.sp  G3V01L0Fi.001.info  G3V01L0Fi.001.sp  G3V01L0Fi.002.info  G3V01L0Fi.002.sp  G3V01L0Fr.001.info  G3V01L0Fr.001.sp  G3V01L1Fr.info  G3V01L1Fr.sp  G3V01L3Fr.info  G3V01L3Fr.sp  G3V01Lm2Fi.info  G3V01Lm2Fi.sp  G3V02L1Fi.001.info  G3V02L1Fi.001.sp  G3V02L3Fi.001.info  G3V02L3Fi.001.sp  (+13 more)
Spec1.0/: Makefile.ipp  Makefile.ipp.profile  Makefile.pppl  al00aa.h  bb00aa.h  bc00aa.h  bf00aa.h  bf10aa.h  bn00aa.h  co00aa.h  co01aa.h  cu00aa.h  df00aa.h  fc02aa.h  fe00aa.h  fe00ab.h  gf00aa.h  global.h  hdfint.h  he01aa.h  input_test.spec  ir00aa.h  jk03aa.h  jo00aa.h  li00aa.h  ma00aa.h  ma00aa_OPTIM.h  ma00ab.h  ma01ag.h  ma02aa.h  macros  manual.h  me00ab.h  mg00aa.h  mp00ac.h  numrec.h  pc00aa.h  pc00ab.h  pc01aa.h  pc02aa.h  (+22 more)
TESTCASES/: iterfree.sp  l2stell.sp
Utilities/: Hdf5File.py  SPEC_HDF5_output_verification.md  SPEC_HDF5_output_verification.txt  SPEC_Utilitites.md  SpecOutput.java  adf.py  adjust_spec_makefile_for_IPP.diff  adjust_spec_makefile_for_draco.diff  genFortran.py  genJava.py  generate_readers.py  read_spec.f90
Utilities/python_wrapper/: .gitignore  CMakeLists.txt  Makefile  README.md  core.py  example.py  example_2.py  kind_map  setup.py  spec.py
Utilities/python_wrapper/cmake/: FindF2PY.cmake  FindF90Wrap.cmake  FindNumPy.cmake  FindPythonExtensions.cmake
Utilities/python_wrapper/examples/: example.py  example_2.py
Utilities/python_wrapper/spec/: __init__.py  core.py
Utilities/pythontools/: .gitignore  README.md  SPEC_postprocessing_lib.ipynb  SPEC_postprocessing_lib.py  compare_spec.py  compare_spec_BACKUP_5088.py  compare_spec_BASE_5088.py  plot_magB.ipynb  plot_magB.py  plot_modB  plot_modB.py  plot_spec_kam.py  plot_spec_poincare  plot_spec_poincare.py  pyproject.toml  read_spec.py  requirements.txt  setup.py  spec.py
Utilities/pythontools/docs/: Tutorial.00.read_SPEC_data.txt  Tutorial.01.Poincare_plot.txt
Utilities/pythontools/docs/jupyter_files/: RBC_ZBS_Coeff_violation.ipynb  SPEC_postprocessing_lib.ipynb
Utilities/pythontools/jupyter_files/: SPEC_postprocessing_lib.ipynb  plot_magB.ipynb
Utilities/pythontools/misc/: Zernike.py  genFortran.py  generate_readers.py
Utilities/pythontools/py_spec/: SPECNamelist.py  __init__.py  compare_spec.py  proc_spec.py  read_spec.py  spec.py
Utilities/pythontools/py_spec/ci/: __init__.py  test.py
Utilities/pythontools/py_spec/input/: __init__.py  spec_namelist.py
Utilities/pythontools/py_spec/jupyter_files/: SPEC_namelist.ipynb  SPEC_postprocessing_lib.ipynb
Utilities/pythontools/py_spec/math/: __init__.py  fourier_surface.py  interface_current.py  spec_fft.py  spec_invfft.py
Utilities/pythontools/py_spec/output/: __init__.py  _interface_current.py  _plot_iota.py  _plot_kam_surface.py  _plot_modB.py  _plot_poincare.py  _plot_pressure.py  _processing.py  spec.py  test_processing.py
Utilities/pythontools/py_spec/plot/: __init__.py  plot_kam_surface.py  plot_poincare.py  plot_pressure.py
Utilities/pythontools/py_spec/tests/: README.md
Utilities/pythontools/py_spec/tests/test_math/: test_spec_fft.py
_includes/: head.html
ci/: Dockerfile.centos7  README.md  cff_to_bib_refs.py
cmake_machines/: centos7_default.json  conda.json  conda_debian.json  gfortran_arch.json  gfortran_debian.json  intel_SUSE.json
docs/: Citelist.md
install/: README.md
pyrun/: main.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_10.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  (+84 more)
src/: CMakeLists.txt  basefn.F90  basefn.f90  bfield.F90  bfield.f90  bndRep.f90  bnorml.F90  bnorml.f90  brcast.F90  brcast.f90  casing.F90  casing.f90  coords.F90  coords.f90  curent.F90  curent.f90  descnt.f90  df00ab.F90  df00ab.f90  dforce.F90  dforce.f90  dfp100.F90  dfp100.f90  dfp200.F90  dfp200.f90  global.F90  global.f90  h5utils.F90  h5utils.f90_tmp  hesian.F90  hesian.f90  inputlist.F90  inputlist.f90  intghs.F90  intghs.f90  iqpack.f  iters.f  jo00aa.F90  jo00aa.f90  lbpol.F90  (+62 more)
src/contrib/: CMakeLists.txt
tokamak_stability/: .V4abcL2.GF.ev  .V4abcL2.GF.ma  .V4abcL2.sp.DF  V4abcL2.sp.end  V4abcL2.sp.h5
(+732 files in other folders)
